changes in selctbox

--- a/cajas.html
+++ b/cajas.html
@@ -69,6 +69,58 @@
                         <label for="productor">productor</label>
                         <select id="productor" required>
                             <option value="">Choose option</option>
+                            <option value="0">Seleccione Productor</option>
+	<option selected="selected" value="00022">JUAN RAFAEL  MINIER MENA</option>
+	<option value="00068">FINCA BILLY</option>
+	<option value="00070">FINCA FERNANDEZ</option>
+	<option value="00071">FINCA MOTA</option>
+	<option value="00072">FINCA YAQUE</option>
+	<option value="00077">BANELINO S,A,</option>
+	<option value="00174">JUAN CARLOS FILPO CASTILLO</option>
+	<option value="01184">HAROLD ROBLES</option>
+	<option value="01223">GRUPO BANAMIEL, S.A.S.</option>
+	<option value="01273">ASOCIACION DE PRODUCTORES DE BANANOS LAS MERCEDES, Inc.</option>
+	<option value="01420">FINCA LIMONES</option>
+	<option value="01487">ASOBANU, S.A</option>
+	<option value="01691">MANUEL ANDRES PEREZ VASQUEZ</option>
+	<option value="01799">ASOCIACION  AGRICOLA NOROESTANA  INC (ASOANOR)</option>
+	<option value="01854">ASOC. DE PRODUCTORES EXPORTADORES DE BANANO DE MONTECRISTI</option>
+	<option value="01855">PLANTACIONES AGRICOLAS MANZANILLO S.R.L.</option>
+	<option value="02187">JOSE DOLORES TAVAREZ TAVAREZ</option>
+	<option value="02244">KELLISA II S A</option>
+	<option value="02252">BANANOSA, S.A.</option>
+	<option value="02326">ASOCIACION DE PRODUCTORES DE FRUTAS DEL NOROESTE INC</option>
+	<option value="02387">ED &amp; RAC PRODUCCIONES BANANERAS, SRL</option>
+	<option value="02434">Hispaniola Fresh Fruit Co. S.A.</option>
+	<option value="02663">ASOCIACION DE BANANEROS DE GUATAPANAL (ASOBAGUA)</option>
+	<option value="02962">Global Banana Fruit, S.R.L.</option>
+	<option value="02997">ASOCIACION AGRICOLA MONTE DE SION, INC</option>
+	<option value="03044">ASOCIACION DE PRODUCTORES AGRICOLAS ABRAHAM RODRIGUEZ, Inc.</option>
+	<option value="03048">PLANTACIONES AGRICOLAS MANZANILLO, SRL-FINCA VILLA SINDA</option>
+	<option value="03054">APROBAPAVER</option>
+	<option value="03110">Filpo Agroindustrial SRL</option>
+	<option value="03142">Asociación de productores Agrícolas Colibrí (APROACO).</option>
+	<option value="03144">Cooperativa Agropecuaria de los empleados de Ekoban, Inc.</option>
+	<option value="03146">AMERICO AUGUSTO RODRIGUEZ RODRIGUEZ</option>
+	<option value="03152">COOPERATIVA AGROPECUARIA Y DE SERVICIOS MULTIPLES DE BANANEROS DOMINICANOS</option>
+	<option value="03153">Asociacion de Agricultores Ramon Antonio Cruz, Inc.</option>
+	<option value="03154">ALBA YUDI SANCHEZ ESPINAL</option>
+	<option value="03157">DOLORES NEREIDA ALFAU</option>
+	<option value="03160">PLANTACIONES JORGE SRL</option>
+	<option value="03161">Finca La Bendicion De Dios</option>
+	<option value="03162">ASOCIACION DE PRODUCTORES BANANOS DEL YAQUE</option>
+	<option value="03164">JULITA BEATRIZ COMA MINGUEZ</option>
+	<option value="03166">Christian Gonell Cruz</option>
+	<option value="03167">PROYECTO BANANERO DEL NOROESTE PROBANOR SRL</option>
+	<option value="03168">ASOCIACION DE PEQUEÑOS PRODUCTORES LA SANTA CRUZ, INC</option>
+	<option value="03174">AGROPECUARIA LA VIGIA SRL</option>
+	<option value="03179">SIANFFREY CRUZ CEBALLO-HACIENDA CRUZ AGROINDUSTRIAL</option>
+	<option value="03188">PORFIRIO DE JESUS ACOSTA GIL</option>
+	<option value="03189">ASOCIACION AGRICOLA BANANA DULCE, INC</option>
+	<option value="03190">LIMONES BIOLOGICOS DE SOSA SRL</option>
+	<option value="03193">FERNANDO ANTONIO ESTEVEZ ESTEVEZ</option>
+	<option value="03195">Asociacion de Productores y Exportadores Agroecologicos</option>
+	<option value="03196">ASOCIACION DE BANANEROS DE LA LINEA, INC.</option>
                         </select>
                     </div>
                     <div class="form-group">
