adjustment select fields

--- a/cajas.html
+++ b/cajas.html
@@ -177,10 +177,16 @@
                                 <td class="editable" contenteditable="true" data-label="hacienda">Title</td>
                                 <td data-label="puerto">
                                     <select>
-                                        <option value="">Seleccione un puerto</option>
-                                        <option value="puerto1">Puerto 1</option>
-                                        <option value="puerto2">Puerto 2</option>
-                                        <option value="puerto3">Puerto 3</option>
+                                        <option value="0">Seleccione Puerto</option>
+                                        <option value="049">AEROPUERTO JUAN SANTA MARIA</option>
+                                        <option value="012">ANTWERP</option>
+                                        <option value="060">DUBLIN</option>
+                                        <option value="026">HAMBURG</option>
+                                        <option value="047">HELSINGBORG, SWEDEN</option>
+                                        <option value="007">PORTSMOUTH</option>
+                                        <option value="002">PUERTO MANZANILLO</option>
+                                        <option value="048">ROTTERDAM</option>
+                                        <option value="054">VLISSINGEN, FLUSHING</option>
                                     </select>
                                 </td>
                                 <td class="editable" contenteditable="true" data-label="marca">Title</td>
