--- a/pallets.html
+++ b/pallets.html
@@ -182,15 +182,34 @@
                                 <td class="editable" contenteditable="true" data-label="Hacienda">Hacienda 1</td>
                                 <td data-label="Puerto Destino">
                                     <select>
-                                        <option value="">Seleccione un puerto</option>
-                                        <option value="puerto1">Puerto 1</option>
-                                        <option value="puerto2">Puerto 2</option>
-                                        <option value="puerto3">Puerto 3</option>
+                                        <option value="0">Seleccione Puerto</option>
+                                        <option value="049">AEROPUERTO JUAN SANTA MARIA</option>
+                                        <option value="012">ANTWERP</option>
+                                        <option value="060">DUBLIN</option>
+                                        <option value="026">HAMBURG</option>
+                                        <option value="047">HELSINGBORG, SWEDEN</option>
+                                        <option value="007">PORTSMOUTH</option>
+                                        <option value="002">PUERTO MANZANILLO</option>
+                                        <option value="048">ROTTERDAM</option>
+                                        <option value="054">VLISSINGEN, FLUSHING</option>
                                     </select>
                                 </td>
                                 <td class="editable" contenteditable="true" data-label="Cant. Cajas">100</td>
                                 <td class="editable" contenteditable="true" data-label="Pallet">P001</td>
-                                <td class="editable" contenteditable="true" data-label="SSCC">SSCC001</td>
+                                <td class="editable" contenteditable="true" data-label="SSCC">
+                                    <select>
+                                        <option value="0">Seleccione Puerto</option>
+                                        <option value="049">AEROPUERTO JUAN SANTA MARIA</option>
+                                        <option value="012">ANTWERP</option>
+                                        <option value="060">DUBLIN</option>
+                                        <option value="026">HAMBURG</option>
+                                        <option value="047">HELSINGBORG, SWEDEN</option>
+                                        <option value="007">PORTSMOUTH</option>
+                                        <option value="002">PUERTO MANZANILLO</option>
+                                        <option value="048">ROTTERDAM</option>
+                                        <option value="054">VLISSINGEN, FLUSHING</option>
+                                    </select>
+                                </td>
                                 <td class="editable" contenteditable="true" data-label="Cajas por Pallet">50</td>
                                 <td class="editable" contenteditable="true" data-label="Cantidad de Pallets">2</td>
                                 <td class="editable" contenteditable="true" data-label="Contenedor">CONT001</td>
