--- a/pallets.html
+++ b/pallets.html
@@ -15,6 +15,7 @@
    
 </head>
 <body>
+    <div class="backimage"></div>
     <aside class="sidebar">
         <button class="sidebar-toggle" aria-label="Toggle Sidebar">
             <i class="fa fa-bars" aria-hidden="true"></i>
