changes image ico

--- a/pallets.html
+++ b/pallets.html
@@ -69,6 +69,7 @@
         </div>
         <div class="main-content-form">
             <form>
+                <h3>información sobre recepción</h3>
                 <div class="form-container">
                     <div class="form-group">
                         <label for="campus">campus</label>
@@ -157,8 +158,8 @@
                     </div>
                 </div>
                 <div class="tabs">
-                    <div class="tab">cajas</div>
-                    <div class="tab active">palets</div>
+                    <div class="tab"><img src="./img/boxes.svg"/>cajas</div>
+                    <div class="tab active"><img src="./img/packed.svg"/> palets</div>
                 </div>
                 <div class="form-container cont-pallets">
                     <div class="form-group">
