changes image ico

--- a/pallets.html
+++ b/pallets.html
@@ -161,6 +161,7 @@
                     <div class="tab"><img src="./img/boxes.svg"/>cajas</div>
                     <div class="tab active"><img src="./img/packed.svg"/> palets</div>
                 </div>
+                <h3>información sobre contenedores</h3>
                 <div class="form-container cont-pallets">
                     <div class="form-group">
                         <div class="form-group sub-form-group">
@@ -222,7 +223,7 @@
                     </div>
                 </div>
 
-                
+                <h3>Tabla de registros</h3>
                 <div class="container-table">
                     <table id="editableTable">
                         <thead>
