--- a/pallets.html
+++ b/pallets.html
@@ -23,11 +23,14 @@
         </button>
         <div class="menu-section">
             <div class="menu-title"><i class="fa fa-cog" aria-hidden="true"></i><span>compra de frutas</span></div>
+            <div class="menu-sub-item"><span>Operaciones</span></div>
             <div class="menu-item active"><i class="fa fa-copyright" aria-hidden="true"></i> <span> Recepción</span></div>
+            <div class="menu-sub-item"><span>Reportes</span></div>
             <div class="menu-item"><i class="fa fa-copyright" aria-hidden="true"></i> <span> Detalle de recepción</span></div>
         </div>
         <div class="menu-section">
             <div class="menu-title"><i class="fa fa-cog" aria-hidden="true"></i><span>exportación</span></div>
+            <div class="menu-sub-item"><span>Reportes</span></div>
             <div class="menu-item"><i class="fa fa-copyright" aria-hidden="true"></i><span> Armar Pallets</span> </div>
             <div class="menu-item"><i class="fa fa-copyright" aria-hidden="true"></i> <span></span> Asignar Contenedor</div></span></div>
         </div>
